# tweet_bot

./: .gitignore  .temperature_state  README.md  crontab_entry  pyproject.toml  tweet_temperature.sh
tests/: __init__.py  test_twitter_lib.py
tweet_bot/: temperature_tweet_bot.py  tmp75b_temperature.py  tmp75b_test.py  twitter_api.py
