[tool.poetry]
name = "tweet_bot"
version = "0.1.0"
description = ""
authors = ["krgough <krgough@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
